--- a/TSAFlickrFeedImageGallery/Base.lproj/Main.storyboard
+++ b/TSAFlickrFeedImageGallery/Base.lproj/Main.storyboard
@@ -77,8 +77,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="pWT-4y-dO2">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="pWT-4y-dO2">
                                 <rect key="frame" x="16" y="72" width="343" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="300" id="TSt-wA-Tq4"/>
+                                </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="55z-C9-Ozv">
                                 <rect key="frame" x="16" y="401" width="343" height="246"/>
